--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -23,19 +23,19 @@
             <fieldset>
                 <div>
                     <label for="nome">Nome:</label>
-                    <input type="text" id="nome" name="nome" required><br><br>
+                    <input type="text" id="nome" name="nome" required placeholder="Nome Completo"><br><br>
                 </div>    
                 <div>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required><br><br>
+                    <input type="email" id="email" name="email" required placeholder="Email"><br><br>
                 </div>   
                 <div>
                     <label for="telefone">Telefone:</label>
-                    <input type="text" id="telefone" name="telefone" required><br><br>
+                    <input type="text" id="telefone" name="telefone" required placeholder="(DDD)99999-9999"><br><br>
                 </div>
                 <div>
                     <label for="endereço">Endereço:</label>
-                    <input type="text" id="endereço" name="endereço" required><br><br>
+                    <input type="text" id="endereço" name="endereço" required placeholder="Rua, Número, Cidade, Estado, Cep"><br><br>
                 </div>
                 <input type="submit" value="Cadastrar">
             </fieldset>
