--- a/static/index.css
+++ b/static/index.css
@@ -2,7 +2,7 @@
 
 body{
    font-family: Arial, Helvetica, sans-serif;
-    background-color:rgb(249, 255, 191)
+    background-color:rgb(239, 245, 219)
 }
 
 ul{
@@ -10,7 +10,8 @@ ul{
     display: flex;
     list-style-type: none;
     align-items: center;
-    padding: 16px;
+    padding: 20px;
+    
    
 
 }
@@ -30,5 +31,22 @@ h2{
 }
 
 div#select_destino{
-    background-color: white;
+    background-color: greenyellow;
+    margin: auto;
+    border-radius: 5px;
 }
+    
+
+
+img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border:  5px solid greenyellow;
+    
+}
+
+.img{
+    text-align: center;
+}
+
