--- a/templates/voluntarios.html
+++ b/templates/voluntarios.html
@@ -10,8 +10,8 @@
     <div id="select_destino">
         <ul>
             <li><a href="{{ url_for('index') }}">Página Inicial</a></li>
-            <li><a href="{{ url_for('cadastro') }}">Cadastro de Voluntários</a></li>
-            <li><a href="{{ url_for('voluntarios') }}">Voluntários Cadastrados</a></li>
+            <li><a href="{{ url_for('cadastro') }}">Cadastro de Estabelecimento Voluntário</a></li>
+            <li><a href="{{ url_for('voluntarios') }}">Busca de Estabelecimento Voluntário</a></li>
         </ul>
     </div>
     
