--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,13 @@
     </div>
         <h1>Bem vindos ao Portal Ajuda Aumigos</h1>
     <h2>Contribua nessa causa</h2>
-
-</header>
+    <div id="cadastre-se">
+        <li><a href="{{ url_for('cadastro') }}">Cadastre-se</a></li>
+    </div>
     
+</header>
+
+
     
 </body>
 </html>
