--- a/static/index.css
+++ b/static/index.css
@@ -50,3 +50,29 @@ img{
     text-align: center;
 }
 
+div#cadastre-se {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: greenyellow;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+    list-style-type: none;
+}
+
+/* Estilos para o botão quando hover */
+div#cadastre-se:hover {
+    background-color: #aaf0ab;
+    transform: scale(1.05);
+}
+
+header{
+    align-items: center;
+    text-align: center;
+}
