--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -31,7 +31,7 @@
                 </div>   
                 <div>
                     <label for="telefone">Telefone:</label>
-                    <input type="text" id="telefone" name="telefone"  required placeholder="(xx)xxxxx-xxxx"><br><br>
+                    <input type="text" id="telefone" name="telefone" maxlength="11" onkeyup="formatarTelefone(this)" required placeholder="(xx)xxxxx-xxxx"><br><br>
                 </div>
                 <div>
                     <label for="endereço">Endereço:</label>
@@ -43,6 +43,18 @@
         </form>
     </div> 
 </div>
+<script>
 
+    function formatarTelefone(input) {
+    // Remove todos os caracteres não numéricos
+    var telefone = input.value.replace(/\D/g, '');
+  
+    // Insere os parênteses, espaço e traço nos lugares corretos
+    telefone = telefone.replace(/(\d{2})(\d{5})(\d{4})/, '($1)$2-$3');
+  
+    // Atualiza o valor do campo de entrada com o telefone formatado
+    input.value = telefone;
+  }
+    </script>
 </body>
 </html>
